<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complaint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location" />
    
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/problem" />
    
      <Spinner
          android:id="@+id/spinner2"
          android:layout_width="match_parent"
          android:layout_height="35dp"
          android:background="@android:drawable/btn_dropdown"
          android:spinnerMode="dropdown" />

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Kindly fill in your details below :"
          android:textAppearance="?android:attr/textAppearanceLarge" />
      
      <EditText
                 android:id="@+id/name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/Name"
                 android:inputType="text" />
      
      
       <EditText
               android:id="@+id/phone"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:hint="@string/MobileNumber"
               android:inputType="phone"
               android:maxLength="10"
               />
      
       <EditText 
            android:id="@+id/address1"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:hint="@string/Address"
            android:inputType="text" 
            android:maxLength="50"
           />

          <EditText 
            android:id="@+id/pin1"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:hint="@string/pin_code"
            android:inputType="text" 
            android:maxLength="6"
           />

    <Button
        android:id="@+id/Add_map"
        android:layout_width="150dp"
        android:layout_height="35dp"

        android:text="ADD LOCATION"
        android:onClick="add_location"/>


    <Button
        android:id="@+id/Add_image"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="ADD IMAGE"
        android:onClick="add_image"/>


          <Button
              android:id="@+id/button1"
              android:layout_width="150dp"
              android:layout_height="35dp"
              android:onClick="onclick_submit"
              android:text="@string/submit" />




</LinearLayout>
